# shortage

./: .coveragerc  .dockerignore  .gitignore  .request.json  Dockerfile  Makefile  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  uwsgi.conf  wsgi.sh
shortage/: cli.py  config.py  filesystem.py  wsgi.py
shortage/networking/: __init__.py  pushover.py
shortage/web/backend/: api.py  base.py
shortage/web/frontend/: package.json
shortage/web/frontend/src/: App.js
tests/functional/: functional-test-config.yaml  httpdomain_client.py  scenarios.py
tests/functional/dao/: test_active_record.py  test_file_dao.py  test_s3_dao.py
tests/functional/ui/: test_healthcheck.py
tests/functional/web/: test_list_shipments.py  test_shipment_deliver.py  test_shipment_handout.py  test_shipment_status_change.py  test_tenant_login.py
