[tool.poetry]
name = "shortage"
version = "0.1.0"
description = ""
authors = ["Gabriel Falcão <gabriel@nacaolivre.org>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
requests = "^2.22"
authlib = "^0.11.0"
chemist = "^1.5"
twilio = "^6.29"
flask-restplus = "^0.12.1"
pendulum = "^2.0"
click = "^7.0"
coloredlogs = "^10.0"
pip = "^19.2"
pync = "^2.0"
uwsgi = "^2.0"
# python-pushover = "^0.4.0"

python-dotenv = "^0.10.3"
[tool.poetry.dev-dependencies]
alembic = "^1.0"
ipdb = "^0.12.2"
tinkerer = "^1.7"
sphinx = "^2.1"
pip = "^19.2"
"testing.postgresql" = "^1.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
